<resources>
    <string name="app_name">Spotify Project</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleHomeFragment">Home</string>
    <string name="tittleSearch">Search</string>
    <string name="titleLibrary">Library</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_or">OR</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_demo_login">Demo login</string>
    <string name="login_with_spotify">Please login with your Spotify account to continue</string>
</resources>